--- a/.github/workflows/build-and-docker.yml
+++ b/.github/workflows/build-and-docker.yml
@@ -23,7 +23,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile  # Path to your Dockerfile
+        file: Dockerfile  # Path to your Dockerfile
         push: true
         tags: |
           necati44/ynov-ci/cd:latest
