--- a/.github/workflows/build-and-docker.yml
+++ b/.github/workflows/build-and-docker.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         push: true
         tags: |
-          necati44/ynov-ci/cd:latest
-          necati44/ynov-ci/cd:${{ github.sha }}
+          necati44/React_Forktastic/cd:latest
+          necati44/React_Forktastic/cd:${{ github.sha }}
