--- a/.github/workflows/build-and-docker.yml
+++ b/.github/workflows/build-and-docker.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         push: true
         tags: |
-          docker.io/necati44/ynov-cicd:latest
-          docker.io/necati44/ynov-cicd:${{ github.sha }}
+          necati44/ynov-cicd:latest
+          necati44/ynov-cicd:${{ github.sha }}
